--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -31,17 +31,21 @@
 	--clr-background-hover-3: #091e4218;
 	--clr-background-hover-new-group: #091e4224;
 	--clr-background-hover-member: #dcdfe4;
+	--clr-background-hover-input: #f7f8f9;
 	--clr-background-editable: #ffffff;
 	--clr-background-fade: #00000026;
 	--clr-background-fade-hover: #00000040;
 	--clr-background-disabled: #091e4208;
 	--clr-background-overlay: rgba(0, 0, 0, 0.75);
+	--clr-background-progress-fill: #091e420f;
 	--clr-background-progress: #579dff;
 	--clr-background-progress-complete: #1f845a;
 	--clr-background-sidebar-open: hsla(211, 24%, 66.1%, 0.9);
 	--clr-background-sidebar-open-hover: hsl(211, 24%, 71.1%);
 	--clr-background-sidebar-open-btn-hover: rgba(0, 0, 0, 0.2);
 	--clr-background-selected-date: #e9f2ff;
+	--clr-background-selected-hovered-date: #cce0ff;
+	--clr-background-modal: #091e420f;
 	// --clr-grid-border: (0,0%,100%,0.16);
 	--clr-grid-border: hsla(0,0%,100%,0.16);;
 	--clr-selected-border: #388bff;
@@ -58,6 +62,7 @@
 	--clr-close-background-hover: #091e4224;
 	--shadow-raised: 0px 1px 1px #091e4240, 0px 0px 1px #091e424f;
 	--shadow-overlay: 0px 8px 12px #091E4226, 0px 0px 1px #091e424f;
+	--shadow-overlay-popover: 0px 8px 12px #091E4226, 0px 0px 1px #091E424F;
 	--shadow-selected: inset 0 0 0 2px var(--clr-selected-border);
 	--shadow-input: inset 0 0 0 1px #8590A2;
 	--shadow-danger: inset 0 0 0 1px #f15b50;
@@ -100,14 +105,18 @@
 	--clr-background-hover-3: #a1bdd914;
 	--clr-background-hover-new-group: #0000003d;
 	--clr-background-hover-member: #454f59;
+	--clr-background-hover-input: #282E33;
 	--clr-background-editable: #22272b;
 	--clr-background-fade: #00000026;
 	--clr-background-fade-hover: #00000040;
 	--clr-background-disabled: #bcd6f00a;
 	--clr-background-overlay: rgba(0, 0, 0, 0.75);
+	--clr-background-progress-fill: #a1bdd914;
 	--clr-background-progress: #0055cc;
 	--clr-background-progress-complete: #1f845a;
 	--clr-background-selected-date: #1c2b41;
+	--clr-background-selected-hovered-date: #09326c;
+	--clr-background-modal: #282e33;
 	// --clr-grid-border: hsla(211,18%,68%,0.16);
 	--clr-grid-border: #858c8f2e;
 	--clr-selected-border: #85b8ff;
@@ -124,6 +133,7 @@
 	--clr-close-background-hover: #a1bdd914;
 	--shadow-raised: 0px 0px 0px 1px #00000000, 0px 1px 1px #03040480, 0px 0px 1px #03040480;
 	--shadow-overlay: 0px 8px 12px #03040480, 0px 0px 1px #03040480;
+	--shadow-overlay-popover:  0px 0px 0px 1px #39424a, 0px 8px 12px #0304045C, 0px 0px 1px 1px #03040480;
 	--shadow-selected: inset 0 0 0 2px var(--clr-selected-border);
 	--shadow-input: inset 0 0 0 1px #738496;
 	--shadow-danger: inset 0 0 0 1px #f15b50;
