--- a/frontend/src/assets/styles/views/_TaskDetails.scss
+++ b/frontend/src/assets/styles/views/_TaskDetails.scss
@@ -74,7 +74,7 @@
     }
 
     &-content {
-        background-color: var(--clr-background-create-board);
+        background-color: var(--clr-background-modal);
         display: grid;
         grid-template-areas:
             "header header"
